Gets workflow without running the workflow engine steps. Cleans up some whitespace and size issues.

--- a/src/app/category/category.component.scss
+++ b/src/app/category/category.component.scss
@@ -31,7 +31,6 @@
 
 ::ng-deep .mat-list-base .mat-list-item .mat-list-item-content,
 ::ng-deep .mat-list-base .mat-list-option .mat-list-item-content {
-  padding: 0;
   font-size: 1rem;
 
   &:hover {
